[package]
name = "phoenix-seat-manager"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Ellipsis-Labs/phoenix-seat-manager-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "Automatic seat manager for the Phoenix program"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix_seat_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
phoenix-v1 = { git = "https://github.com/JakkuSakura/phoenix-v1", features = [ "no-entrypoint" ] }
shank = "0.3.0"
solana-program = "1.18"
bytemuck = "1.13.0"
borsh = "1.3.1"
lib-sokoban = "0.3.0"
num_enum = "0.7.2"
itertools = "0.12.1"
thiserror = "1.0.38"
ellipsis-macros = "0.1.1"
solana-security-txt = "1.1"
static_assertions = "1.1.0"
spl-token = { version = "4.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.1", features = [ "no-entrypoint" ] }
toml_edit = "0.22.4"
proc-macro-crate = "3.1.0"

